# water

./: .Makefile.swp  .central2d.h.swp  .gitignore  .lshallow.o21559.swp  .nfs00000000012f04720000009e  BlockedSimulation.h  BlockedSimulation_BACKUP_17075.h  BlockedSimulation_LOCAL_17075.h  FinalReportWater.docx  Group-013 Final Report-1.cpt  Group-013 Final Report.tex  Group-013 Progress Report.tex  Group001_Stage1.tex  Group001_Stage2.tex  Makefile  Makefile.in.brew  Makefile.in.clang  Makefile.in.gcc  Makefile.in.icc  Makefile.in.icc-mac  Makefile.in.mac  Makefile.in.no_avx  README.md  Report-1.cpt  Report-2.cpt  Report-3.cpt  Report.aux  Report.fdb_latexmk  Report.out  Report.tex  ReportWater.docx  ScalingStudiesTimings.xlsx  SimBlock.h  TODO.txt  ToVid.sh  aligned_allocator.h  amplxe_overview.txt  analysis-local.sh  back_central2d.h  back_shallow2d.h  (+189 more)
C_code/: Makefile.in.icc-mac  Makefile.in.mac  shallow2d.c  stepper.c  tests.lua
C_code_vec/: Makefile.in.clang  Makefile.in.gcc  ldriver.c  lshallow-ampl.pbs  shallow2d.c  stepper.c  stepper.h  tests.lua  visualizer.py
Cpp_Code/: Makefile.in.gcc  central2d.h  minmod.h  visualizer.py
FinalWriteup/: Tables.xlsx  Writeup.aux  Writeup.tex  scaleff.eps  t_iter.eps  ~$Tables.xlsx
Final_Report/: Report_prelim.aux  Report_prelim.tex
Initial_Report/: Report_prelim.aux  Report_prelim.tex
Writeup/: Writeup.aux  Writeup.tex  weak-scaling.xlsx
c/: README.md  jt-scheme.md  time-shallow.pbs
central2d_1/: central2d.h  timing_strong_1.csv  timing_strong_2.csv  timing_strong_3.csv  timing_strong_4.csv  timing_strong_5.csv  (+11 more)
docs/: COPYING  Makefile.in  README  aclocal.m4  albs-uguide.txt  configure  configure.ac
docs/py/: fig-base-vectorized-results.py  fig-parallel-device-batching-strong-results.py  fig-parallel-device-strong-results.py  fig-parallel-device-weak-results.py  fig-parallel-node-results.py  fig-parallel-node-strong-results.py  fig-parallel-node-weak-results.py  fig-roofline.py  plot-example.py  py.ac  py.mk.in  py.sty
docs/scripts/: mk-install-dirs.sh  mk-latex-deps.rb  run-latex.rb
docs/src/: cbxabbrv.bst  cbxnsf.cls  cs5220-hw2-report.tex  fig-base-vectorized-results.tex  fig-intro-dummy.tex  fig-parallel-device-batching-results.tex  fig-parallel-device-results.tex  fig-parallel-node-blocking.tex  fig-parallel-node-results.tex  fig-roofline.tex  sec-intro.tex  sec-parallel-device.tex  sec-parallel-node.tex  sec-parallel.tex  sec-profile.tex  sec-tune.tex
docs/svg/: svg-split-layers.rb  svg.ac  svg.mk.in  svg.sty
(+934 files in other folders)
